--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+  schedule:
+    - cron: '*/5 * * * *'  # این خط کرون جاب را هر 5 دقیقه اجرا می‌کند
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
